[MIG-051] V2 Draw Vertical Sliceを整備する
MIG-051を自律Squash Merge
